--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,8 +1,7 @@
-title: Clok
+title: clok
 email: clok@kjellhanken.de
 description: >- # this means to ignore newlines until "baseurl:"
   The minimalist smart clok you need!
-baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://clok.kjellhanken.de" # the base hostname & protocol for your site, e.g. http://example.com
 github_username: kjell5317
 
@@ -10,3 +9,4 @@ github_username: kjell5317
 theme: minima
 plugins:
   - jekyll-feed
+  - jekyll-sitemap
